# _test

./: Cargo.toml  README.md  tags
docs/: all.html  fn.build_database.html  fn.enable_search_mode.html  fn.main.html  fn.stemmer.html  fn.tally_words.html  index.html  sidebar-items.js
docs/inscribe/: all.html  enum.RankerAlg.html  enum.Stemmer.html  fn.build_database.html  fn.enable_search_mode.html  fn.main.html  fn.tally_words.html  index.html  sidebar-items.js
docs/inscribe/rankers/: index.html  sidebar-items.js  struct.WordCountRanker.html  trait.Ranker.html
docs/inscribe/stemmers/: index.html  sidebar-items.js  struct.SimplePorterStemmer.html  trait.IStemmer.html
docs/inscribe/types/: constant.ARTICLE_COUNT.html  index.html  struct.Pages.html
docs/rankers/: index.html  struct.WordCountRanker.html  trait.Ranker.html
docs/types/: constant.MECHANICAL_SYMPATHY_DIAL.html  sidebar-items.js  struct.Page.html  struct.Record.html  struct.WikiResponse.html  type.Result.html
src/: main.rs  rankers.rs  stemmers.rs  types.rs
